<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dp"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/person_item_img_desc"
            android:padding="3dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNameSurname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:text="@string/default_text"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="0.2"
                android:background="#FFFFFF"
                android:contentDescription="@string/item_menu_icon_desc"
                android:scaleType="centerInside"
                app:srcCompat="@android:drawable/ic_menu_add"
                android:onClick="openPopUp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>