<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="user" type="danijelsokac.android.personaldatamanagement.models.UserModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llHeaderContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFECB3"
            android:elevation="9dp"
            android:orientation="horizontal"
            android:padding="7dp"
            android:showDividers="middle">

            <ImageButton
                android:id="@+id/ivProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:elevation="9dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@{user.getFullName()}"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNameFieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/form_name_label"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@{user.name}"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSurnameFieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/form_surname_label"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSurnameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@{user.surname}"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPhoneFieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/form_phone_label"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPhoneValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{user.phoneNumber}"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMobilePhoneFieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvMobilePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/form_mobilePhone_label"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvMobilePhoneValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{user.mobilePhoneNumber}"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEmailFieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/form_email_label"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvEmailValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{user.email}"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAddressFieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/form_address_label"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvAddressValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@{user.address}"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtonsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="21dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCC9C9"
                android:text="@string/form_close_label" />

        </LinearLayout>
    </LinearLayout>
</layout>